feat: give more details in respence API
